--- a/ATOToolDemo/packages.config
+++ b/ATOToolDemo/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net472" />
   <package id="ControlzEx" version="4.4.0" targetFramework="net472" />
+  <package id="Extended.Wpf.Toolkit" version="4.0.2" targetFramework="net472" />
   <package id="Fluent.Ribbon" version="7.1.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net472" />
