--- a/ATOToolDemo/packages.config
+++ b/ATOToolDemo/packages.config
@@ -2,9 +2,15 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net472" />
   <package id="ControlzEx" version="4.4.0" targetFramework="net472" />
-  <package id="Extended.Wpf.Toolkit" version="4.0.2" targetFramework="net472" />
+  <package id="Extended.Wpf.Toolkit" version="4.1.0" targetFramework="net472" />
   <package id="Fluent.Ribbon" version="7.1.0" targetFramework="net472" />
+  <package id="LightningChartUltimateWPF" version="6.5.8" targetFramework="net472" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
+  <package id="NPOI" version="2.5.3" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.8.6" targetFramework="net472" />
+  <package id="SharpZipLib" version="1.2.0" targetFramework="net472" />
 </packages>
