还差图像自适应
增加功能：
1-- 修复了DataGrid自动生成多余的列，只需要把orientation设为左对齐。
2---生成文件缓存区，供用户自行删除文件，用了DataGrid.
3--增加图像序号，并禁止用户修改
4--完善异常捕捉功能
5--完善状态显示，使其不突兀
6-使用GridSplitter让用户自动调节Datagrid大小
7--打开文件框时用filter筛选特定文件格式，让其他格式的文件不显示出来。
8--增加RadioButton命令，切换单一(多列车)时，自动清除已有图像。
9--把ComboBox的宽度设为自动。

--- a/ATOToolDemo/ATOToolDemo.csproj
+++ b/ATOToolDemo/ATOToolDemo.csproj
@@ -163,6 +163,7 @@
     </ApplicationDefinition>
     <Compile Include="Model\AscDatas.cs" />
     <Compile Include="Model\ExcelHelper.cs" />
+    <Compile Include="Model\FileCache.cs" />
     <Compile Include="Model\LiveChartParemeters.cs" />
     <Compile Include="Model\MultyTrainDataGrid.cs" />
     <Compile Include="Model\ChartDatas.cs" />
